--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -121,10 +121,10 @@ Aa-3
                                     <td name="name.ja|slice">
                                         $name.ja$
                                     </td>
-                                    <td name="startDay">$startDay$</td>
-                                    <td name="endDay">$endDay$</td>
-                                    <td name="videoFormat">
-                                        $videoFormat$
+                                    <td name="startDate|date:YYYY/MM/DD">$startDate$</td>
+                                    <td name="endDate|date:YYYY/MM/DD HH:mm:ss">$endDate$</td>
+                                    <td name="videoFormat.0.typeOf__videoFormat.1.typeOf__videoFormat.2.typeOf">
+                                        $videoFormat.0.typeOf$ $videoFormat.1.typeOf$ $videoFormat.2.typeOf$
                                     </td>
                                     <td name="id__additionalProperty">
                                         <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
