--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -91,7 +91,7 @@ OC-01
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="offerCount__id">
                                         <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
-                                            $offerCount$ オファー
+                                            $offerCount$
                                         </a>
                                     </td>
                                     <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
