--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -8,7 +8,7 @@ Aa-8
 <script src="/js/jquery.simplePagination.js"></script>
 <script src="/js/master/commonMaster.js"></script>
 <script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/ticketTypeGroupsList.js"></script>
+<script src="/js/master/ticketTypeGroup/index.js"></script>
 <%- contentFor('body') %>
 
 <% /* フォーム */ %>
@@ -83,7 +83,7 @@ Aa-8
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="offerCount__id">
                                         <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
-                                            $offerCount$ オファー
+                                            $offerCount$
                                         </a>
                                     </td>
                                     <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
