--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -12,7 +12,7 @@ AT-06
 
 <%- contentFor('body') %>
 
-<div class="col-sm-12 form-container search searchAccountTitleSet">
+<div class="col-sm-12 search searchAccountTitleSet">
     <form method="post" class="form-horizontal">
         <%- include('../../common/master/_hidden') %>
 
@@ -42,14 +42,12 @@ AT-06
             </div>
         </div>
         <div class="form-group">
-            <div class="panel-body">
-                <a class="btn btn-ok search btn-primary"><span>検索する</span></a>
-            </div>
+            <a class="btn btn-ok search btn-primary"><span>検索する</span></a>
         </div>
     </form>
 </div>
 
-<div class="col-sm-12 form-container search">
+<div class="col-sm-12 search">
     <div id="list" class="table-responsive" style="display:none;">
         <table class="table table-bordered table-striped">
             <thead>
