--- a/views/creativeWorks/movie/edit.ejs
+++ b/views/creativeWorks/movie/edit.ejs
@@ -8,18 +8,11 @@ Aa-9
 <script src="/js/master/creativeWorks/movieForm.js"></script>
 
 <%- contentFor('body') %>
+<form method="post">
+    <%- include('../../common/errorMessage') %>
+    <%- include('../../common/successMessage') %>
 
-<div class="form-container">
-    <form method="post" class="p-3 bg-light-gray">
-        <div class="menu-group">
-            <%- include('../../common/errorMessage') %>
-            <%- include('../../common/successMessage') %>
-        </div>
+    <%- include('form', { forms: forms, isNew: false }) %>
 
-        <%- include('form', { forms: forms, isNew: false }) %>
-
-        <div class="btn-area panel-body">
-            <button type="button" class="btn btn-ok btn-primary">更新する</button>
-        </div>
-    </form>
-</div>
+    <button type="button" class="btn btn-ok btn-primary">更新する</button>
+</form>
