--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -98,8 +98,8 @@ Aa-10
                                     <th>サブタイトル</th>
                                     <th>上映時間</th>
                                     <th>レイティング</th>
-                                    <th>公開日</th>
-                                    <th>興行終了予定</th>
+                                    <th>公開</th>
+                                    <th>興行終了</th>
                                     <th>追加特性</th>
                                     <th></th>
                                 </tr>
