--- a/views/events/screeningEventSeries/edit.ejs
+++ b/views/events/screeningEventSeries/edit.ejs
@@ -8,20 +8,15 @@ Aa-2
 <script src="/js/master/events/screeningEventSeriesAddEdit.js"></script>
 
 <%- contentFor('body') %>
-<div class="form-container">
-    <% /* フォーム */ %>
-    <form method="post" class="p-3 bg-light-gray" id="movie_product">
-        <input type="hidden" name="id" value="<%= forms.id %>">
-        <div class="menu-group">
-            <%- include('../../common/errorMessage') %>
-            <%- include('../../common/successMessage') %>
-        </div>
-        <% /* 登録・更新共通部 */ %>
-        <%- include('form', { forms: forms }) %>
+<% /* フォーム */ %>
+<form method="post" id="movie_product">
+    <input type="hidden" name="id" value="<%= forms.id %>">
+    <%- include('../../common/errorMessage') %>
+    <%- include('../../common/successMessage') %>
 
-        <% /* 更新ボタン */ %>
-        <div class="btn-area panel-body">
-            <button type="button" class="btn btn-ok btn-primary">更新する</button>
-        </div>
-    </form>
-</div>
+    <% /* 登録・更新共通部 */ %>
+    <%- include('form', { forms: forms }) %>
+
+    <% /* 更新ボタン */ %>
+    <button type="button" class="btn btn-ok btn-primary">更新する</button>
+</form>
