--- a/views/offerCatalogs/update.ejs
+++ b/views/offerCatalogs/update.ejs
@@ -9,18 +9,12 @@ OC-02
 <script src="/js/master/offerCatalogs/form.js"></script>
 
 <%- contentFor('body') %>
-<div class="form-container">
-    <form method="post" class="p-3 bg-light-gray" id="ticketTypeGroupsForm">
-        <div class="menu-group">
-            <%- include('../common/errorMessage') %>
-            <%- include('../common/successMessage') %>
-        </div>
+<form method="post" id="ticketTypeGroupsForm">
+    <%- include('../common/errorMessage') %>
+    <%- include('../common/successMessage') %>
 
-        <%- include('form', { forms: forms, isNew: false }) %>
+    <%- include('form', { forms: forms, isNew: false }) %>
 
-        <div class="btn-area panel-body">
-            <button type="button" class="btn btn-ok btn-primary">更新する</button>
-            <button type="button" class="btn btn-delete btn-danger">削除する</button>
-        </div>
-    </form>
-</div>
+    <button type="button" class="btn btn-ok btn-primary">更新する</button>
+    <button type="button" class="btn btn-delete btn-danger">削除する</button>
+</form>
