--- a/views/priceSpecifications/new.ejs
+++ b/views/priceSpecifications/new.ejs
@@ -8,19 +8,13 @@ PS-01
 <script src="/js/master/priceSpecification/form.js"></script>
 
 <%- contentFor('body') %>
-<div class="form-container">
-    <% /* フォーム */ %>
-    <form method="post" class="p-3 bg-light-gray">
-        <div class="menu-group">
-            <%- include('../common/errorMessage') %>
-            <%- include('../common/successMessage') %>
-        </div>
+<% /* フォーム */ %>
+<form method="post">
+    <%- include('../common/errorMessage') %>
+    <%- include('../common/successMessage') %>
 
-        <%- include('form', { forms: forms }) %>
+    <%- include('form', { forms: forms }) %>
 
-        <% /* 登録ボタン */ %>
-        <div class="btn-area panel-body">
-            <button type="button" class="btn btn-ok btn-primary">登録する</button>
-        </div>
-    </form>
-</div>
+    <% /* 登録ボタン */ %>
+    <button type="button" class="btn btn-ok btn-primary">登録する</button>
+</form>
