--- a/views/serviceTypes/add.ejs
+++ b/views/serviceTypes/add.ejs
@@ -8,20 +8,14 @@ Aa-16
 <script src="/js/master/serviceTypes/form.js"></script>
 
 <%- contentFor('body') %>
-<div class="form-container">
-    <% /* フォーム */ %>
-    <form method="post" class="p-3 bg-light-gray">
-        <div class="menu-group">
-            <%- include('../common/errorMessage') %>
-            <%- include('../common/successMessage') %>
-        </div>
+<% /* フォーム */ %>
+<form method="post">
+    <%- include('../common/errorMessage') %>
+    <%- include('../common/successMessage') %>
 
-        <% /* 登録・更新共通部 */ %>
-        <%- include('form', { forms: forms, isNew: true }) %>
+    <% /* 登録・更新共通部 */ %>
+    <%- include('form', { forms: forms, isNew: true }) %>
 
-        <% /* 登録ボタン */ %>
-        <div class="btn-area panel-body">
-            <button type="button" class="btn btn-ok btn-primary">登録する</button>
-        </div>
-    </form>
-</div>
+    <% /* 登録ボタン */ %>
+    <button type="button" class="btn btn-ok btn-primary">登録する</button>
+</form>
