### Changed - 劇場上映作品の作品選択を名称検索対応

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,6 +213,9 @@ body {
 .bmd-form-group .form-control, .bmd-form-group input::placeholder {
   font-size: inherit; }
 
+.select2 {
+  margin-top: .4375rem; }
+
 .scheduler {
   margin: 0 auto;
   overflow: auto;
