--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -239,3 +239,6 @@ body {
 .bmd-form-group .form-control, .bmd-form-group input::placeholder {
     font-size: inherit;
 }
+.select2 {
+    margin-top: .4375rem;
+}
