--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -23,6 +23,9 @@
     <!-- timepicker -->
     <link rel="stylesheet" href="/css/jquery.timepicker.min.css">
 
+    <!-- select2 -->
+    <link href="/node_modules/select2/dist/css/select2.min.css" rel="stylesheet">
+
     <!-- original -->
     <link href="/css/style.css" rel="stylesheet">
     <%- defineContent('styles') %>
@@ -57,6 +60,9 @@
 
     <!-- timepicker -->
     <script src="/js/jquery.timepicker.min.js"></script>
+
+    <!-- select2 -->
+    <script src="/node_modules/select2/dist/js/select2.min.js"></script>
 
     <!-- json editor -->
     <script src="/node_modules/@json-editor/json-editor/dist/jsoneditor.min.js"></script>
