--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -51,19 +51,21 @@ Aa-3
                                 </div>
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label for="movieIdentifier" class="bmd-label-static">
-                                        作品コード
+                                        作品
                                     </label>
-                                    <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier"
-                                        placeholder="" maxlength=64 value="">
+                                    <select class="form-control" name="workPerformed[identifier]"
+                                        id="workPerformed[identifier]" style="width: 100%;">
+                                    </select>
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label for="name" class="bmd-label-static">
-                                        作品名
+                                        名称
                                     </label>
                                     <input class="form-control" name="name" id="name" placeholder="" maxlength=64
                                         value="">
                                 </div>
+
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label for="containsEnded" class="bmd-label-static">
                                     </label>
