### Changed - レイアウト調整

--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -266,22 +266,22 @@ Aa-11
                                         $reservationStatus$
                                     </td>
                                     <td
-                                        name="reservationFor.id__reservationFor.name.ja|slice__reservationFor.startDate|date:YY-MM-DD HH:mm">
+                                        name="reservationFor.id__reservationFor.name.ja|slice:10__reservationFor.startDate|date:YY-MM-DD HH:mm">
                                         <a href="#$reservationFor.id$">$reservationFor.name.ja$</a><br>
                                         $reservationFor.startDate$
                                     </td>
-                                    <td name="reservationFor.superEvent.id__reservationFor.superEvent.name.ja|slice">
+                                    <td name="reservationFor.superEvent.id__reservationFor.superEvent.name.ja|slice:10">
                                         <a target="_blank"
                                             href="/events/screeningEventSeries/$reservationFor.superEvent.id$/update">$reservationFor.superEvent.name.ja$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
                                     </td>
                                     <td
-                                        name="reservationFor.superEvent.location.name.ja|slice__reservationFor.location.name.ja">
+                                        name="reservationFor.superEvent.location.name.ja|slice:10__reservationFor.location.name.ja|slice:10">
                                         $reservationFor.superEvent.location.name.ja$<br>
                                         $reservationFor.location.name.ja$
                                     </td>
                                     <td
-                                        name="reservedTicket.typeOf__reservedTicket.ticketType.id__reservedTicket.ticketType.name.ja|slice__unitPriceSpec.price__unitPriceSpec.referenceQuantity.value__unitPriceSpec.priceCurrency">
+                                        name="reservedTicket.ticketType.id__reservedTicket.ticketType.name.ja|slice:10__unitPriceSpec.price__unitPriceSpec.referenceQuantity.value__unitPriceSpec.priceCurrency">
                                         <span class="font-weight-bold"><a target="_blank"
                                                 href="/ticketTypes/$reservedTicket.ticketType.id$/update">$reservedTicket.ticketType.name.ja$
                                                 <i class="material-icons"
@@ -292,7 +292,7 @@ Aa-11
                                     <td name="ticketedSeat">
                                         $ticketedSeat$<br>
                                     </td>
-                                    <td name="underName.name|slice__id">
+                                    <td name="underName.name|slice:10__id">
                                         $underName.name$<br>
                                         <a href="javascript:void(0)" class="showUnderName" data-id="$id$">
                                             <span>表示</span>
