--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -3,9 +3,13 @@
 <%- contentFor('displayId') %>
 Aa-4
 <%- contentFor('styles') %>
+<link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="/js/lodash.debounce.min.js"></script>
+<script src="/js/jquery.simplePagination.js"></script>
+<script src="/js/master/commonMaster.js"></script>
+<script src="/js/master/commonMasterList.js"></script>
 <script src="/js/master/events/screeningEvent.js"></script>
 
 <%- contentFor('body') %>
@@ -28,6 +32,8 @@ Aa-4
                 <div class="row">
                     <div class="col-sm-12">
                         <form>
+                            <%- include('../../common/master/_hidden') %>
+
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static">劇場 <span class="text-danger">＊</span></label>
@@ -55,50 +61,22 @@ Aa-4
                                     </select>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
 
-                                    <div class="input-group">
-                                        <input autocomplete="off" class="form-control datepicker" name="date"
-                                            placeholder="選択してください" maxlength="10">
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">から</span>
-                                        </div>
-                                    </div>
+                                    <input autocomplete="off" class="form-control datepicker" name="date"
+                                        placeholder="選択してください" maxlength="10">
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
-                                    <label class="bmd-label-static"></label>
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label class="bmd-label-static">表示形式</label>
 
-                                    <div class="input-group">
-                                        <div class="form-check form-check-radio form-check-inline">
-                                            <label class="form-check-label">
-                                                <input class="form-check-input" type="radio" name="days"
-                                                    id="radio-days-1" value="1" checked> 1日
-                                                <span class="circle">
-                                                    <span class="check"></span>
-                                                </span>
-                                            </label>
-                                        </div>
-                                        <div class="form-check form-check-radio form-check-inline">
-                                            <label class="form-check-label">
-                                                <input class="form-check-input" type="radio" name="days"
-                                                    id="radio-days-3" value="3"> 3日
-                                                <span class="circle">
-                                                    <span class="check"></span>
-                                                </span>
-                                            </label>
-                                        </div>
-                                        <div class="form-check form-check-radio form-check-inline">
-                                            <label class="form-check-label">
-                                                <input class="form-check-input" type="radio" name="days"
-                                                    id="radio-days-7" value="7"> 7日
-                                                <span class="circle">
-                                                    <span class="check"></span>
-                                                </span>
-                                            </label>
-                                        </div>
-                                    </div>
+                                    <select class="form-control" name="format">
+                                        <option value="1">1日</option>
+                                        <option value="3">3日</option>
+                                        <option value="7">7日</option>
+                                        <option value="table">テーブル</option>
+                                    </select>
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
@@ -120,9 +98,85 @@ Aa-4
                         </form>
                     </div>
                 </div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12 table-responsive">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>スクリーン</th>
+                                    <th>作品</th>
+                                    <th class="text-left">名称</th>
+                                    <th>開始</th>
+                                    <th>終了</th>
+                                    <th>オファー</th>
+                                    <th>追加特性</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow" eventId="$id$">
+                                    <td name="id">$id$</td>
+                                    <td name="location.name.ja|slice">
+                                        $location.name.ja$
+                                    </td>
+                                    <td name="workPerformed.id__workPerformed.identifier__workPerformed.name|slice">
+                                        <a target="_blank"
+                                            href="/creativeWorks/movie/$workPerformed.id$/update">$workPerformed.name$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
+                                    </td>
+                                    <td name="name.ja|slice">$name.ja$</td>
+                                    <td name="startDate|date:YY/MM/DD HH:mm:ss">$startDate$</td>
+                                    <td name="endDate|date:YY/MM/DD HH:mm:ss">$endDate$</td>
+                                    <td name="id__offers">
+                                        <a href="javascript:void(0)" class="showOffers" data-id="$id$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                    <td name="id__additionalProperty">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="modal-event" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title"></h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        <i class="material-icons">clear</i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <div id="scheduler" class="d-none">
