--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -22,104 +22,8 @@ OC-01
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i>更新</a>
         </div>
-        <div class="material-datatables">
-            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <form method="post">
-                            <% /* 共通Hiddenコントロール */ %>
-                            <%- include('../common/master/_hidden') %>
 
-                            <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="itemOffered[typeOf][$eq]" class="bmd-label-static">
-                                        アイテム
-                                    </label>
-                                    <select class="form-control" name="itemOffered[typeOf][$eq]">
-                                        <option value="">---</option>
-                                        <option value="MembershipService">会員サービス</option>
-                                        <option value="Product">アドオン</option>
-                                    </select>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="identifier" class="bmd-label-static">
-                                        コード
-                                    </label>
-                                    <input type="text" class="form-control" name="identifier" id="identifier"
-                                        placeholder="" maxlength=64>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="name" class="bmd-label-static">
-                                        名称
-                                    </label>
-                                    <input type="text" class="form-control" name="name" id="name" placeholder=""
-                                        maxlength=64>
-                                </div>
-                                <div class="form-group bmd-form-group col-md-3">
-                                </div>
-                                <div class="form-group bmd-form-group col-md-3">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12 table-responsive">
-                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
-                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
-                            aria-describedby="datatables_info">
-                            <thead class="text-primary">
-                                <tr>
-                                    <th>コード</th>
-                                    <th>名称</th>
-                                    <th>オファー</th>
-                                    <th>アイテム</th>
-                                    <th>サービス区分</th>
-                                    <th>追加特性</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr id="templateRow" _id="$id$">
-                                    <td name="id__identifier">
-                                        <a target="_blank" href="/offerCatalogs/$id$/update">
-                                            $identifier$
-                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                        </a>
-                                    </td>
-                                    <td name="name.ja|slice">$name.ja$</td>
-                                    <td name="offerCount__id">
-                                        <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
-                                            $offerCount$
-                                        </a>
-                                    </td>
-                                    <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
-                                    <td name="itemOffered.serviceType.codeValue">
-                                        $itemOffered.serviceType.codeValue$</td>
-                                    <td name="id__additionalProperty">
-                                        <a href="javascript:void(0)" class=" showAdditionalProperty" data-id="$id$">
-                                            <span>表示</span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-5">
-                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-7">
-                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
-                        </div>
-                        <div id="pager" class="div_pager_parent float-right"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <%- include('./_dataTables', { onlyEventService: false }) %>
     </div>
 </div>
 
