--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -187,24 +187,20 @@ Aa-6
             </div>
         </div>
     </div>
-</div>
 
-<div class="modal fade" id="modal-offer" tabindex="-1">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title"></h4>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+    <div class="modal fade" id="modal-offer" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 <%- include('../common/master/_loading') %>
-
-<%# popup %>
-<%- include('./_listTicketTypeGroup') %>
